# dec_cont_BEng_Diss

./: .gitignore  CMakeLists.txt  package.xml  requirements.txt  setup.cfg  setup.py
config/: experiments.yaml
dec_control/: hello_world.py
decentralised_control/: communication_middleware.py  comparative_analysis.py  experiment_runner.py  metrics_collector.py
decentralised_control/auction/: auction_node.py
decentralised_control/consensus/: time_varying_consensus.py
decentralised_control/execution/: collaborative_task_executor.py  force_control_manager.py  timed_automata_executor.py
decentralised_control/recovery/: partial_failure_recovery.py  recovery_node.py
decentralised_control/task_manager/: task_manager_node.py
decentralised_control/utils/: task_dependency_analyzer.py
decentralized_auction_mm/: CMakeLists.txt  package.xml
decentralized_auction_mm/config/: auction_params.yaml  robot_config.yaml  task_config.yaml
decentralized_auction_mm/include/decentralized_auction_mm/auction/: auction_algorithm.hpp  bid_calculator.hpp  consensus_protocol.hpp  recovery_mechanism.hpp
decentralized_auction_mm/include/decentralized_auction_mm/robot/: mobile_manipulator.hpp  robot_controller.hpp  robot_manipulator.hpp  task_executor.hpp
decentralized_auction_mm/include/decentralized_auction_mm/task/: dependency_manager.hpp  task_manager.hpp  task_representation.hpp
decentralized_auction_mm/include/decentralized_auction_mm/util/: communication.hpp  math_utils.hpp  visualization.hpp
decentralized_auction_mm/launch/: auction_system.launch.py  dual_robot.launch.py  intergrated_auction.py  simulation.launch.py  single_robot.launch.py
decentralized_auction_mm/msg/: AuctionStatus.msg  Bid.msg  BidArray.msg  RobotStatus.msg  Task.msg  TaskArray.msg
decentralized_auction_mm/scripts/: generate_tasks.py  visualize_results.py
decentralized_auction_mm/src/auction/: auction_algorithm.cpp  bid_calculator.cpp  consensus_protocol.cpp  recovery_mechanism.cpp
decentralized_auction_mm/src/nodes/: auction_node.cpp  robot_node.cpp  task_generator.cpp
decentralized_auction_mm/src/robot/: mobile_manipulator.cpp  robot_controller.cpp  robot_manipulator.cpp  task_executor.cpp
decentralized_auction_mm/src/task/: dependency_manager.cpp  task_manager.cpp  task_representation.cpp
decentralized_auction_mm/src/util/: communication.cpp  math_utils.cpp  visualization.cpp
decentralized_auction_mm/srv/: FailRobot.srv  StartAuction.srv  StopAuction.srv
decentralized_auction_mm/worlds/: assembly_environment.world
decentralized_control/: __init__.py  communication_middleware.py  comparative_analysis.py  experiment_runner.py  industrial_scenarios.py  math_proof_validatior.py  metrics_collector.py
decentralized_control/auction/: __init__.py  auction_node.py  bid_calculator.py
decentralized_control/consensus/: __init__.py  consensus_node.py  time_varying_consensus.py
decentralized_control/execution/: __init__.py  collaborative_task_executor.py  execution_controller.py  force_control_manager.py  timed_automata_executor.py
decentralized_control/recovery/: __init__.py  partial_failure_recovery.py  recovery_node.py
decentralized_control/task_manager/: __init__.py  critical_path_analyzer.py  task_manager_node.py
decentralized_control/utils/: __init__.py  task_dependency_analyzer.py
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
install/dec_control/include/dec_control/dec_control/msg/: bid.hpp  capability_update.h  capability_update.hpp  collaboration_request.hpp  collaboration_response.hpp  heartbeat.h  heartbeat.hpp  recovery_status.h  rosidl_typesupport_introspection_c__visibility_control.h  synchronization_signal.h  synchronization_signal.hpp  task.hpp  task_assignment.hpp  task_list.h  task_priority.hpp
install/dec_control/lib/dec_control/: assembly_task_visualiser.py  experiment_runner.py  gazebo_physics_configurator.py  run_experiments.py
install/dec_control/share/dec_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dec_control/share/dec_control/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  dec_controlConfig.cmake  dec_control__rosidl_typesupport_introspection_cExport-noconfig.cmake  dec_control__rosidl_typesupport_introspection_cExport.cmake  dec_control__rosidl_typesupport_introspection_cppExport.cmake  export_dec_control__rosidl_generator_cExport-noconfig.cmake  export_dec_control__rosidl_generator_pyExport-noconfig.cmake  export_dec_control__rosidl_generator_pyExport.cmake  export_dec_control__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/dec_control/share/dec_control/config/: assemby_environment.yaml  cluttered_environment.yaml  mobile_manipulator.rviz  simple_environment.yaml
install/dec_control/share/dec_control/launch/: decentralized_controller.launch.py
install/dec_control/share/dec_control/msg/: Bid.idl  CollaborationResponse.idl  CollaborationResponse.msg  RecoveryStatus.idl  SynchronizationSignal.idl  SynchronizationSignal.msg  Task.idl  Task.msg  TaskList.idl  TaskList.msg  TaskPriority.idl  TaskPriority.msg
install/dec_control/share/dec_control/srv/: GetAvailableTasks_Request.msg  GetAvailableTasks_Response.msg  InitAuction.srv  InitAuction_Request.msg  InitAuction_Response.msg  SubmitBid.srv  SubmitBid_Request.msg
launch/: decentralised_controller.launch.py  simulation.launch.py  unit_tests.launch.py
log/: latest_build  latest_test
msg/: CollaborationRequest.msg  NetworkTopology.msg
scripts/: analyze_adaptation.py  experiment_runner.py  plot_results.py  robot_model_spawner.py
srv/: GetAvailableTasks.srv
test/: __init__.py  test_auction.py  test_communication.py  test_comparative.py  test_consensus.py  test_execution.py  test_metrics.py  test_recovery.py  test_task_manager.py
worlds/: simple_environment.world
(+110 files in other folders)
