<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>decentralized_auction_mm</name>
  <version>1.0.0</version>
  <description>
    Decentralized control of dual mobile manipulators using distributed auction algorithms
    for independent and collaborative assembly tasks
  </description>
  <maintainer email="user@example.com">Tom Le Huray</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS2 Core dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  
  <!-- TF2 dependencies - CRITICAL -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Gazebo dependencies -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  
  <!-- TurtleBot3 dependencies -->
  <depend>turtlebot3_msgs</depend>
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_simulations</depend>
  
  <!-- OpenMANIPULATOR dependencies -->
  <depend>open_manipulator_x_description</depend>
  <depend>open_manipulator_x_libs</depend>
  
  <!-- Other dependencies -->
  <depend>eigen</depend>
  
  <!-- Message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Python dependencies for scripts -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>